# upwork-proposal-agent-

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/upwork_agent/: config.py  errors.py  gemini_client.py  google_auth.py  pdf_export.py  relevance.py  schemas.py  slides_render.py  store.py
tests/: test_relevance.py  test_schemas.py
